# DensityDetectionViaCSI

./: .gitignore
0.Documents/: 000.DAC_to_ADC.ipynb  000.OFDM信号に関する研究手帳.ipynb  Dense Pose.md  Install CSI Tool for Ubuntu 1604.md  PCA-Kalman device-free indoor human behavior detection with commodity Wi-Fi.md  PCA-Kalman: device-free indoor human behavior detection with commodity Wi-Fi.md  Using Radio Signals.md
1.Intel5300/: README.md  requirements.txt
1.Intel5300/CSITool/plotter/: Bfee.py  CSIUtilities.py  plotter_base.py  plotter_online.py  plotter_replayer.py  resender.py
1.Intel5300/CSITool/tools/: .gitignore  csi_listener.py  download_thirds.sh  get_adapter_info.sh  install_anaconda.sh  install_cmake.sh  install_csi_tools.sh  install_cuda_10.sh  install_gdb.sh  install_tshark.sh
1.Tools/: README.md
1.Tools/CSITool/dynamic_plotter/: Bfee.py  CSIUtilities.py  plotter.py  plotter_local_debug.py
1.Tools/CSITool/multi_ping/: CMakeLists.txt
1.Tools/CSITool/ping/: .gitignore  CMakeLists.txt  main.c
1.Tools/CSITool/ping/src/: common.cpp  common.h  main.cpp
1.Tools/CSITool/plotter/: plotter_base.py  plotter_online.py  plotter_replayer.py
1.Tools/CSITool/tools/: csi_listener.py  csi_recorder.py  get_adapter_info.sh  hex_reader.py  install_anaconda.sh  install_csi_tools.sh  install_cuda_10.sh  install_openwrt_sdk.sh
1_Intel5300/: README.md
1_Intel5300/CSITool/plotter/: Bfee.py
1_Intel5300/CSITool/tools/: .gitignore  download_thirds.sh  install_cmake.sh  install_csi_tools.sh  install_gdb.sh
2.OpenWRT/: README.md
2.OpenWRT/SDK/: .gitignore
2.OpenWRT/csi_loop_ping/: Makefile  main.cpp
2.OpenWRT/csi_udp_resender/: Makefile  csi_fun.cpp  csi_fun.h  main.cpp
2.OpenWRT/cv_csv_recorder/: Makefile
2.OpenWRT/mulping/: .gitignore  CMakeLists.txt  Makefile
2.OpenWRT/mulping/src/: common.cpp  common.h  main.cpp
2.OpenWRT/openwrt_csi/: .gitignore  AtheroPlotter.py  CSIConverter.py  PlayCSIRaw.py  PlayCSIVideo.py  ReadCSI.py  ReadLogFile.py  readsdk.c  test.py
2.OpenWRT/openwrt_csi/origin_src/: read_csi.c  read_log_file.m
2.OpenWRT/pc_recorder/: .gitignore  CMakeLists.txt  CSIHelper.cpp  CSIHelper.h  Main.cpp  Main_UDP.cpp  Makefile  VideoHelper.cpp  VideoHelper.h  temp.txt
2.OpenWRT/pc_side_recorder/: CMakeLists.txt  CSIHelper.h  Main_UDP.cpp
2.OpenWRT/recvCSI/: Makefile  csi_fun.h  main.c
2.OpenWRT/tools/: .gitignore  192.168.1.1.info  192.168.4.1.info  192.168.4.172.info  README.md  dev_info.md  download_sdk_A7.sh  history.txt
2.OpenWRT/udpping/: Makefile
2.OpenWRT/udpping/src/: common.cpp  common.h  main.cpp
2_OpenWRT/: README.md
2_OpenWRT/csi_udp_resender/: main.cpp
2_OpenWRT/mulping/: .gitignore
2_OpenWRT/openwrt_csi/: .gitignore  AtheroPlotter.py  ReadCSI.py  VideoWriter.py
2_OpenWRT/pc_recorder/: CMakeLists.txt  CSIHelper.cpp  Makefile
2_OpenWRT/recvCSI/: csi_fun.c
2_OpenWRT/tools/: README.md
3.ESP32/doc/: DevelopmentLog.md
3.Infrastructure/BinParser/: BinValidation.ipynb  CSIConverter.py  ParseBinFile.py  VideoWriter.py  parser.py
3.Infrastructure/BinParser/data/: BinDataStruct_v1.py
3.Infrastructure/BinParser/video/: VideoWriter.py
3.Infrastructure/CSIGenerator/csi/: CSIHelper.cpp
3.Infrastructure/CSIGenerator/csi_loop_ping/: Makefile
3.Infrastructure/CSVDataAnalyze/: parser.py
3.Infrastructure/DataAnalyze/: CSIDataStruct.py  CSISignalPlotter.py
3.Infrastructure/OpenWRTCSIv1SigReplay/: OpenWRTCSIv1SigReplay.sln
3.Infrastructure/PCSampling/: .gitignore  CMakeLists.txt  DebugMain.cpp  Main.cpp  Makefile  README.md  batch_yolov8.sh  bin2csv.cpp  csi2bin.cpp  decoder.py  yolov8_detect.py
3.Infrastructure/PCSampling/csi/: CSIHelper.cpp  CSIHelper.h  GeneralCSIDataStruct.cpp  GeneralCSIDataStruct.h  OpenWRT_v1.cpp  OpenWRT_v1.h  StandardCSIDataProcessing.cpp  StandardCSIDataProcessing.h
3.Infrastructure/PCSampling/cv/: CVMatrix.cpp  CVMatrix.h  VideoHelper.cpp  VideoHelper.h
3.Infrastructure/PCSampling/filesystem/: FileStorage.cpp  FileStorage.h  FileSystemUtils.cpp  SynchronousBinProcessor.cpp  SynchronousBinProcessor.h
3.Infrastructure/PCSampling/fs/: FileSystemUtils.cpp  FileSystemUtils.h  SynchronousBinProcessor.cpp  SynchronousBinProcessor.h
3.Infrastructure/PCSampling/inc/: CSIHelper.h  FileStorage.h  SHA.h
3.Infrastructure/PCSampling/local/: Keyboards.h  LowBitsOperation.h
3.Infrastructure/PCSampling/network/: Network.cpp  Network.h
3.Infrastructure/PCSampling/security/: HashCode.cpp  MD5.h  SHA1.cpp  SHA256.h
3.Infrastructure/PCSampling/src/: CSIHelper.cpp  FileStorage.cpp  Main.cpp  Network.cpp  SHA.cpp  VideoHelper.cpp  test.cpp
3.Infrastructure/PCSampling/storage/: FileStorage.cpp  FileStorage.h
3.Infrastructure/PCSampling/threads/: ThreadPool.cpp  ThreadPool.h  example.c
3.Infrastructure/PCSampling/tools/BinParser/: batch_decoder.sh  parser.py
3.Infrastructure/PCSampling/tools/BinParser/csi/: CSIConverter.py
3.Infrastructure/PCSampling/tools/BinParser/video/: VideoWriter.py
3.Infrastructure/PCSampling/tools/CSVDataReplay/: replayer.py
3.Infrastructure/PCSampling/tools/CSVDataReplay/plot/: LinearSignalChart.py  MatrixPreprocessor.py
3.Infrastructure/PCSampling_bin/: .gitignore  CMakeLists.txt  Main.cpp  README.md
3.Infrastructure/PCSampling_color/: .gitignore  CMakeLists.txt  Main.cpp
3_Infrastructure/: README.md
3_Infrastructure/PCSampling/: .gitignore  csi2bin.cpp  data_clean_v1.py  data_clean_ver1.py  pic_clean_v1.py  yolov8_detect.py
4.CSIAnalyzing/: SinusoidalSignalAnalysis.ipynb  common.py  compressed.py  compressed_four.py  filtered.py  heatmap.py  hotmap.py  kalman.py  replay.py  replayer.py  test.ipynb  test.py
4.CSIAnalyzing/csi/: BaseData.py  BinDataLoader.py  CSVDataLoader.py
4.CSIAnalyzing/filter/: KalmanFilter.py  kalman_filter.py
4.CSIAnalyzing/plot/: DynamicLineChart.py  HeattMapChart.py
4.CSIAnalyzing/utilities/: CSVFrameInterpolation.py  ImageLoader.py  MatrixPreprocessor.py  csi_toolkit.py  image_toolkit.py
5.Infrastructure/PCSampling/: Makefile  batch_decode.sh  data_clean_ver1.py  pic_clean_v1.py
(+67 files in other folders)
